# hk-home-intel

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml
apps/api/src/hk_home_intel_api/: main.py
apps/web/: package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/activity/: page.tsx
apps/web/app/compare/: page.tsx
apps/web/app/components/: app-header.tsx  compare-toggle-button.tsx  compare-tray.tsx  decision-workflow-nav.tsx  development-leaflet-map.tsx  money-value.tsx  watchlist-button.tsx
apps/web/app/launch-watch/: page.tsx
apps/web/app/lib/: area.ts  compare-store.ts  listing-events.ts  segment.ts
configs/: commercial_monitors.toml  launch_watch_projects.toml  scheduler.toml
docs/: api-design.md  architecture.md  command-cheatsheet.md  data-model.md  local-development.md  operations.md  roadmap.md  source-catalog.md  windows-onboarding.md
infra/docker/: README.md  compose.optional.yml
infra/migrations/: README.md  env.py
infra/migrations/versions/: 20260412_0001_init_core_tables.py  20260412_0002_add_i18n_fields.py  20260412_0003_add_development_source_fields.py  20260412_0004_add_watchlist_item.py  20260412_0005_add_refresh_job_run.py  20260412_0006_add_scheduler_plan_override.py  20260413_0007_add_price_event.py  20260413_0008_add_listing_field_hash.py  20260414_0009_add_search_preset.py  20260415_0010_add_commercial_search_monitor.py  README.md
tests/: test_health.py  test_ingestion.py  test_scheduler.py  test_srpe_adapter.py
(+27 files in other folders)
